# hpc-bridge

./: .dockerignore  .gitignore  .mcp.json  README.md  pyproject.toml
.claude-plugin/: plugin.json
agentic/: .env.example  Dockerfile  README.md  clean-session.sh  entrypoint.sh  run_smoke.sh  run_suite.py
agentic/harness/: human_sim.py  invariants.py  provenance.py  regrade.py  run.py  runner.py  test_invariants.py  trace_adapter.py
agentic/scenarios/: aurora_pbs_bringup.py  endpoint_reuse.py  endpoint_reuse_chain.py  facility_cache.py  gated_provision.py  happy_path.py  idle_release_kill.py  long_job_30m.py  long_task_via_handle.py  saturation.py  spend_refusal.py  stop_confirmed.py  task_cap_probe.py
commands/: hpc-connect.md
docs/: plugin-design.md  vision.md
docs/analysis/: 00-executive-summary.md  01-viability-and-opportunity.md  02-risk-register.md  03-ssh-mfa-interactive-access.md  04-architecture-and-roadmap.md  README.md
docs/design/: agent-tool-boundary.md  facility-catalog.md  facility-discovery.md  pilot-job-repl-lifecycle.md  plugin-v1-design.md  workflow.md
docs/hpc-bridge-vault/: Demos.md  Happy path.md  Home.md  Vault style guide.md
docs/hpc-bridge-vault/Concepts/: Cost control.md  Credential seeding.md  Discovery today.md  Facility catalog.md  MEP & templated endpoints.md  Resource shapes & the spend floor.md  Session continuity.md  Standing up the endpoint.md  (+2 more)
docs/plans/: 2026-06-02-plugin-v1-m0.md  2026-06-02-plugin-v1-m1.md
hooks/: credential-guard.sh  hooks.json
skills/driving-hpc/: SKILL.md
src/hpc_bridge/: cost.py  credentials.py  discovery.py  dispatch.py  endpoint.py  lifecycle.py  models.py  profile.py  runner.py  server.py  session_shell.py  shapes.py  state.py
tests/: conftest.py  fakes.py  test_catalog_bundled.py  test_catalog_entry.py  test_catalog_flow.py  test_catalog_ingest.py  test_catalog_make.py  test_catalog_parsers.py  test_catalog_profile_bridge.py  test_catalog_search.py  test_cost.py  test_credentials.py  test_discovery.py  test_dispatch.py  test_endpoint_cli.py  test_facility_contract.py  test_lifecycle.py  test_local_facility.py  test_models.py  test_plugin_packaging.py  test_profile.py  test_remote_facility.py  test_runner.py  test_server.py  test_session_shell.py  test_shapes.py  test_smoke.py  test_state.py
tests/catalog_fixtures/: two_machines.yaml
tests/integration/: test_local_endpoint.py  test_run_shell_live.py
(+49 files in other folders)
