[project]
name = "hpc-bridge"
version = "0.1.0"
description = "Extend AI coding agents into HPC via Globus Compute"
requires-python = ">=3.11"
dependencies = ["mcp>=1.23,<2", "pydantic>=2", "pyyaml>=6"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]
integration = ["globus-compute-sdk>=4", "globus-compute-endpoint>=4"]

[project.scripts]
hpc-bridge = "hpc_bridge.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hpc_bridge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
