[project]
name = "hpc-bridge"
version = "0.1.0"
description = "Extend AI coding agents into HPC via Globus Compute"
requires-python = ">=3.11"
dependencies = ["mcp>=1.23,<2", "pydantic>=2", "pyyaml>=6", "globus-sdk>=4.4,<5"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "jinja2>=3"]
integration = [
    "globus-compute-sdk>=4",
    # The endpoint daemon (local provisioning) is Unix-only — it pulls pyprctl +
    # python-daemon, which have no Windows wheels and break `pip install` there.
    # The marker keeps `[integration]` installable on every OS; the SDK (dispatch /
    # BYO via HPC_BRIDGE_ENDPOINT_ID) is cross-platform and is all non-Linux needs.
    "globus-compute-endpoint>=4; sys_platform == 'linux'",
]

[project.scripts]
hpc-bridge = "hpc_bridge.server:main"
hpc-bridge-catalog = "hpc_bridge.catalog.ingest:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hpc_bridge"]

# This plugin launches via `uvx --from <repo> hpc-bridge`. uv's default cache heuristic
# rebuilds a local dir dependency only when pyproject.toml/setup.py/setup.cfg or the
# top-level `src/` dir changes — NOT when files *inside* src/ change. That let a stale
# wheel keep running after edits to src/hpc_bridge/*.py (the server ran old code). Track
# every source file so a fresh `uvx` (new session) always rebuilds. Custom cache-keys
# replace the defaults, so pyproject.toml must be listed explicitly.
[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.py" }, { file = "src/**/*.yaml" }]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
